# mdnotes

./: .rustfmt.toml  Cargo.toml  FEATURES.md  LICENSE  README.md  TODO.md  clippy.toml  install.ps1  install.sh
.github/workflows/: aur-publish.yml  build.yml  release.yml
aur/: PKGBUILD
src/: cli.rs  config.rs  filter.rs  git.rs  lib.rs  main.rs  models.rs  storage.rs  tags.rs  tui.rs  util.rs
src/commands/: add.rs  complete.rs  config.rs  delete.rs  due.rs  edit.rs  find.rs  list.rs  mod.rs  priority.rs  search.rs  setup.rs  show.rs  sync.rs
tests/: core.rs
