[package]
name = "mdnotes"
version = "0.1.0"
edition = "2021"
authors = ["rellit"]
description = "A simple command-line/TUI application for taking notes and managing tasks"
license = "MIT"
repository = "https://github.com/rellit/mdnotes"
readme = "README.md"
keywords = ["notes", "tasks", "cli", "tui", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
uuid = { version = "1.19.0", features = ["v4"] }
clap = { version = "4.5.13", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "mdn"
path = "src/main.rs"
