[package]
name = "mdnotes"
version = "0.3.0"
edition = "2024"
authors = ["rellit"]
description = "A simple command-line/TUI application for taking notes and managing tasks"
license = "MIT"
repository = "https://github.com/rellit/mdnotes"
readme = "README.md"
keywords = ["notes", "tasks", "cli", "tui", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
uuid = { version = "1.22.0", features = ["v4"] }
clap = { version = "4.6.0", features = ["derive"] }
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
] }
crossterm = "0.29.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "mdn"
path = "src/main.rs"

[[bin]]
name = "mdnui"
path = "src/bin/mdnui.rs"
